--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 850px;
-    height: 150vh;
+    height: 175vh;
     margin: 0 auto;
 }
 
@@ -24,5 +24,6 @@ body {
 
 .content {
     border: 2px solid;
-    width: 70vw;
+    width: 625px;
+    flex: 0 0 auto;
 }
