--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     margin: 0;
     background-color: white;
+    color: white;
     display: flex;
     flex-direction: column;
-    max-width: 850px;
-    height: 175vh;
+    max-width: 1000px;
+    height: 185vh;
     margin: 0 auto;
 }
 
@@ -27,9 +28,16 @@ body {
 }
 
 .content {
-    width: 650px;
+    width: 750px;
     padding: 0;
     flex: 0 0 auto;
+}
+
+.one .content {
+    display: flex;
+    flex-direction: column;
+    gap: 68px;
+    padding: 12px;
 }
 
 .navigation {
@@ -41,8 +49,41 @@ body {
 ul {
     display: flex;
     list-style-type: none;
+    gap: 16px;
 }
 
 a {
     text-decoration: none;
+    color: white;
+}
+
+.information {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 160px;
+    gap: 30px;
+}
+
+.text {
+    height: auto;
+    width: 650px;
+}
+
+h1, p, a, h2 {
+    margin: 0 0 8px 0;
+    font-family: Hero, sans-serif;
+}
+
+p {
+    font-size: 14px;
+}
+
+.image {
+    background-color: rgba(229, 231, 235, .3);
+    height: inherit;
+    width: 650px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
