--- a/style.css
+++ b/style.css
@@ -33,57 +33,115 @@ body {
     flex: 0 0 auto;
 }
 
+
+
 .one .content {
     display: flex;
     flex-direction: column;
-    gap: 68px;
+    gap: 56px;
     padding: 12px;
 }
 
-.navigation {
+.one .navigation {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-ul {
+.one ul {
     display: flex;
     list-style-type: none;
     gap: 16px;
 }
 
-a {
+.one a {
     text-decoration: none;
     color: white;
 }
 
-.information {
+.one .information {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 160px;
+    height: 175px;
     gap: 30px;
 }
 
-.text {
+.one .text {
     height: auto;
     width: 650px;
 }
 
-h1, p, a, h2 {
+.one h1, p, a, h2 {
     margin: 0 0 8px 0;
     font-family: Hero, sans-serif;
 }
 
-p {
+.one h1 {
+    font-size: 40px;
+
+}
+
+.one p {
     font-size: 14px;
 }
 
-.image {
+.one .image {
     background-color: rgba(229, 231, 235, .3);
     height: inherit;
     width: 650px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.one button {
+    background-color: #3882F6;
+    color: white;
+    border: 0;
+    padding: 4px 24px;
+    border-radius: 6px;
+}
+
+
+
+.two h2 {
+    color: #1F2937;
+    margin-bottom: 36px;
+    font-size: 28px;
+}
+
+.two .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 28px;
+}
+
+.two p {
+    color: #1F2937;
+    font-size: 16px;
+}
+
+.two .image {
+    display: flex;
+    gap: 16px;
+}
+
+.two .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+    color: #1F2937;
+    text-align: center;
+    gap: 8px;
+}
+
+.two .square {
+    width: 125px;
+    height: 125px;
+    background-color: rgb(255, 255, 255);
+    border: 3px solid #3882F6;
+    border-radius: 12px;
 }
